--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,8 +1,9 @@
 @import "./settings";
 @import "./components/buttons";
+@import "./components/title-page";
 @import "./components/cta";
 @import "./layout/header";
 @import "./layout/main";
 @import "./layout/footer";
-@import "./pages/page-accueil";
 @import "./pages/home";
+@import "./pages/nous-connaitre";
