--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -111,7 +111,7 @@
     }
     p {
       color: $white;
-      text-align: left;
+      text-align: justify;
       font-size: 0.9rem;
 
       .signature {
