--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -42,11 +42,11 @@ header {
         ul {
           display: flex;
           justify-content: space-evenly;
-
+          align-items: center;
           li {
             list-style: none;
             transition: 0.2s;
-            padding: 0 10px 10px;
+            padding: 0 10px;
             cursor: pointer;
             position: relative;
 
@@ -60,15 +60,18 @@ header {
               display: flex;
               width: 100%;
               height: 100%;
-
               i {
                 transition: 0.2s;
-                transform: translate(25%, 25%);
-                font-size: 0.9rem;
+                font-size: 1.5rem;
 
                 &:hover {
                   color: $color1;
                 }
+              }
+
+              .fa-chevron-down {
+                transform: translate(25%, 20%);
+                font-size: 0.9rem;
               }
             }
 
@@ -78,7 +81,7 @@ header {
               display: none;
               position: absolute;
               z-index: 999999999999999999999999999999999999999999;
-              margin-top: 5px;
+              // margin-top: 5px;
 
               ul {
                 box-shadow: 0 0 5px $blackShadow;
@@ -115,6 +118,9 @@ header {
                     text-align: left;
                     font-size: 0.9rem;
                     color: $black;
+                    display: flex;
+                    width: 100%;
+                    height: 100%;
                   }
                 }
               }
