--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -745,4 +745,301 @@ footer .footer-copyright .heart {
 }
 #nous-connaitre #qui-sommes-nous div p {
   color: #fff;
+}
+#nous-connaitre #nos-services-aux-adherents {
+  text-align: center;
+}
+#nous-connaitre #nos-services-aux-adherents h2 {
+  text-align: center;
+}
+#nous-connaitre #nos-services-aux-adherents h2:after {
+  margin: 20px auto 0;
+}
+#nous-connaitre #nos-services-aux-adherents .services-container {
+  margin-top: 20px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+#nous-connaitre #nos-services-aux-adherents .services-container .service {
+  border: 3px solid #8b0000;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+}
+#nous-connaitre #nos-services-aux-adherents .services-container .service i {
+  font-size: 2rem;
+  color: #8b0000;
+  margin-bottom: 20px;
+  text-align: center;
+}
+#nous-connaitre #nos-services-aux-adherents .services-container .service h3 {
+  color: #8b0000;
+  margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+#nous-connaitre #nos-services-aux-adherents .services-container .service h3:after {
+  margin: 20px auto 0;
+  display: block;
+  content: "   ";
+  height: 1px;
+  width: 50px;
+  border-top: 3px solid #8b0000;
+}
+#nous-connaitre #nos-revendications {
+  padding: 0;
+  margin: 0 50px 50px;
+  background: url(../img/revendications.webp) top/cover;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+}
+#nous-connaitre #nos-revendications .revendications-div {
+  margin: 0;
+  padding: 50px;
+  background: linear-gradient(135deg, rgba(184, 0, 0, 0.7), rgba(139, 0, 0, 0.7));
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#nous-connaitre #nos-revendications .revendications-div h2 {
+  color: #fff;
+  text-align: center;
+}
+#nous-connaitre #nos-revendications .revendications-div h2:after {
+  margin: 20px auto 0;
+  border-top: 3px solid #fff;
+}
+#nous-connaitre #nos-revendications .revendications-div p {
+  color: #fff;
+}
+#nous-connaitre #nos-revendications .revendications-div .revendication-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-top: 30px;
+}
+#nous-connaitre #nos-revendications .revendications-div .revendication-container .revendication {
+  padding: 20px;
+  border: 3px solid #fff;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#nous-connaitre #nos-valeurs {
+  text-align: center;
+}
+#nous-connaitre #nos-valeurs h2 {
+  text-align: center;
+}
+#nous-connaitre #nos-valeurs h2:after {
+  margin: 20px auto 0;
+}
+#nous-connaitre #nos-valeurs .valeurs-container {
+  margin-top: 20px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+#nous-connaitre #nos-valeurs .valeurs-container .valeur {
+  border: 3px solid #8b0000;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+}
+#nous-connaitre #nos-valeurs .valeurs-container .valeur i {
+  font-size: 2rem;
+  color: #8b0000;
+  margin-bottom: 20px;
+  text-align: center;
+}
+#nous-connaitre #nos-valeurs .valeurs-container .valeur h3 {
+  color: #8b0000;
+  margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+#nous-connaitre #nos-valeurs .valeurs-container .valeur h3:after {
+  margin: 20px auto 0;
+  display: block;
+  content: "   ";
+  height: 1px;
+  width: 50px;
+  border-top: 3px solid #8b0000;
+}
+#nous-connaitre #notre-fonctionnement {
+  padding: 0;
+  margin: 0 50px 50px;
+  background: url(../img/assemblee.webp) top/cover;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div {
+  margin: 0;
+  padding: 50px;
+  background: linear-gradient(135deg, rgba(184, 0, 0, 0.7), rgba(139, 0, 0, 0.7));
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div h2 {
+  color: #fff;
+  text-align: center;
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div h2:after {
+  margin: 20px auto 0;
+  border-top: 3px solid #fff;
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div p {
+  color: #fff;
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+  margin-top: 30px;
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container .fonctionnement-item {
+  padding: 20px;
+  border: 3px solid #fff;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 10% 90%;
+  gap: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container .fonctionnement-item:first-of-type {
+  margin-left: 30px;
+}
+#nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container .fonctionnement-item i {
+  background: #fff;
+  width: 70px;
+  height: 70px;
+  border-radius: 360px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #8b0000;
+  -webkit-transform: translateX(-55px);
+          transform: translateX(-55px);
+}
+#nous-connaitre #notre-reseau div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 50px 50px;
+}
+#nous-connaitre #notre-reseau div h2 {
+  text-align: center;
+}
+#nous-connaitre #notre-reseau div h2:after {
+  margin: 20px auto 0;
+  border-top: 3px solid #8b0000;
+}
+#nous-connaitre .cta {
+  padding: 0;
+}
+#nous-connaitre .cta .overlay {
+  padding: 50px;
+  background: rgba(255, 255, 255, 0.2);
+}
+#nous-connaitre .cta .overlay h2 {
+  color: #000;
+  text-shadow: 0 0 5px #fff;
+  font-size: 2rem;
+  padding-bottom: 0px;
+  text-align: center;
+}
+#nous-connaitre .cta .overlay p {
+  text-shadow: 0 0 5px #fff;
+}
+#nous-connaitre .cta .overlay button a {
+  background: #8b0000;
+  color: #fff;
+}
+#nous-connaitre .cta .overlay button a:hover {
+  background: rgba(255, 255, 255, 0.25);
+  color: #8b0000;
 }/*# sourceMappingURL=index.css.map */
