--- a/assets/css/pages/_nous-connaitre.scss
+++ b/assets/css/pages/_nous-connaitre.scss
@@ -51,6 +51,277 @@
     }
   }
 
+  #nos-services-aux-adherents {
+    text-align: center;
+
+    h2 {
+      text-align: center;
+
+      &:after {
+        margin: 20px auto 0;
+      }
+    }
+
+    .services-container {
+      margin-top: 20px;
+      padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+
+      .service {
+        border: 3px solid $color1;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        border-radius: 10px;
+        box-shadow: 0 0 5px $blackShadow;
+
+        i {
+          font-size: 2rem;
+          color: $color1;
+          margin-bottom: 20px;
+          text-align: center;
+        }
+        h3 {
+          color: $color1;
+          margin-bottom: 20px;
+          text-align: center;
+          text-transform: uppercase;
+
+          &:after {
+            margin: 20px auto 0;
+            display: block;
+            content: "   ";
+            height: 1px;
+            width: 50px;
+            border-top: 3px solid $color1;
+          }
+        }
+      }
+    }
+  }
+
   #nos-revendications {
+    padding: 0;
+    margin: 0 50px 50px;
+    background: url(../img/revendications.webp) top/cover;
+    border-radius: 10px;
+    box-shadow: 0 0 5px $blackShadow;
+
+    .revendications-div {
+      margin: 0;
+      padding: 50px;
+      background: $degrade2;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h2 {
+        color: $white;
+        text-align: center;
+
+        &:after {
+          margin: 20px auto 0;
+          border-top: 3px solid $white;
+        }
+      }
+
+      p {
+        color: $white;
+      }
+
+      .revendication-container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+        margin-top: 30px;
+
+        .revendication {
+          padding: 20px;
+          border: 3px solid $white;
+          border-radius: 10px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+    }
+  }
+
+  #nos-valeurs {
+    text-align: center;
+
+    h2 {
+      text-align: center;
+
+      &:after {
+        margin: 20px auto 0;
+      }
+    }
+
+    .valeurs-container {
+      margin-top: 20px;
+      padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+
+      .valeur {
+        border: 3px solid $color1;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        border-radius: 10px;
+        box-shadow: 0 0 5px $blackShadow;
+
+        i {
+          font-size: 2rem;
+          color: $color1;
+          margin-bottom: 20px;
+          text-align: center;
+        }
+        h3 {
+          color: $color1;
+          margin-bottom: 20px;
+          text-align: center;
+          text-transform: uppercase;
+
+          &:after {
+            margin: 20px auto 0;
+            display: block;
+            content: "   ";
+            height: 1px;
+            width: 50px;
+            border-top: 3px solid $color1;
+          }
+        }
+      }
+    }
+  }
+
+  #notre-fonctionnement {
+    padding: 0;
+    margin: 0 50px 50px;
+    background: url(../img/assemblee.webp) top/cover;
+    border-radius: 10px;
+    box-shadow: 0 0 5px $blackShadow;
+
+    .fonctionnement-div {
+      margin: 0;
+      padding: 50px;
+      background: $degrade2;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h2 {
+        color: $white;
+        text-align: center;
+
+        &:after {
+          margin: 20px auto 0;
+          border-top: 3px solid $white;
+        }
+      }
+
+      p {
+        color: $white;
+      }
+
+      .fonctionnement-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 50px;
+        margin-top: 30px;
+
+        .fonctionnement-item {
+          padding: 20px;
+          border: 3px solid $white;
+          border-radius: 10px;
+          display: grid;
+          grid-template-columns: 10% 90%;
+          gap: 10px;
+          justify-content: center;
+          align-items: center;
+
+          &:first-of-type {
+            margin-left: 30px;
+          }
+
+          i {
+            background: $white;
+            width: 70px;
+            height: 70px;
+            border-radius: 360px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: $color1;
+            transform: translateX(-55px);
+          }
+        }
+      }
+    }
+  }
+
+  #notre-reseau {
+    div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0 50px 50px;
+
+      h2 {
+        text-align: center;
+
+        &:after {
+          margin: 20px auto 0;
+          border-top: 3px solid $color1;
+        }
+      }
+    }
+  }
+
+  .cta {
+    padding: 0;
+
+    .overlay {
+      padding: 50px;
+      background: $whiteOverlay;
+
+      h2 {
+        color: $black;
+        text-shadow: 0 0 5px $white;
+        font-size: 2rem;
+        padding-bottom: 0px;
+        text-align: center;
+      }
+
+      p {
+        text-shadow: 0 0 5px $white;
+      }
+
+      button {
+        a {
+          background: $color1;
+          color: $white;
+
+          &:hover {
+            background: $whiteShadow;
+            color: $color1;
+          }
+        }
+      }
+    }
   }
 }
