--- a/assets/css/pages/_nous-connaitre.scss
+++ b/assets/css/pages/_nous-connaitre.scss
@@ -63,8 +63,7 @@
     }
 
     .services-container {
-      margin-top: 20px;
-      padding: 20px;
+      margin: 40px auto;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 20px;
@@ -165,8 +164,7 @@
     }
 
     .valeurs-container {
-      margin-top: 20px;
-      padding: 20px;
+      margin: 40px auto;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 20px;
