--- a/assets/css/components/_title-page.scss
+++ b/assets/css/components/_title-page.scss
@@ -1,10 +1,17 @@
 #title-page {
-  background: $degrade;
+  background: url(../img/logo-fo-transport-13.png) repeat;
+  background-size: 90px;
+  margin: 0;
+  padding: 0;
 
   .title-container {
-    padding: 10px;
+    background: $degrade2;
 
     h1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 50px;
       font-size: 2.2rem;
       color: $white;
       text-shadow: 0 0 5px $blackShadow;
