--- a/assets/css/pages/_nous-connaitre.scss
+++ b/assets/css/pages/_nous-connaitre.scss
@@ -1,5 +1,5 @@
 #nous-connaitre {
-  section {
+  .section {
     padding: 50px;
     h2 {
       color: $color1;
@@ -290,36 +290,36 @@
     }
   }
 
-  .cta {
-    padding: 0;
+  // .cta {
+  //   padding: 0;
 
-    .overlay {
-      padding: 50px;
-      background: $whiteOverlay;
+  //   .overlay {
+  //     padding: 50px;
+  //     background: $whiteOverlay;
 
-      h2 {
-        color: $black;
-        text-shadow: 0 0 5px $white;
-        font-size: 2rem;
-        padding-bottom: 0px;
-        text-align: center;
-      }
+  //     h2 {
+  //       color: $black;
+  //       text-shadow: 0 0 5px $white;
+  //       font-size: 2rem;
+  //       padding-bottom: 0px;
+  //       text-align: center;
+  //     }
 
-      p {
-        text-shadow: 0 0 5px $white;
-      }
+  //     p {
+  //       text-shadow: 0 0 5px $white;
+  //     }
 
-      button {
-        a {
-          background: $color1;
-          color: $white;
+  //     button {
+  //       a {
+  //         background: $color1;
+  //         color: $white;
 
-          &:hover {
-            background: $whiteShadow;
-            color: $color1;
-          }
-        }
-      }
-    }
-  }
+  //         &:hover {
+  //           background: $whiteShadow;
+  //           color: $color1;
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 }
