--- a/assets/css/components/_title-page.scss
+++ b/assets/css/components/_title-page.scss
@@ -1,17 +1,13 @@
 #title-page {
-  background: url(../img/logo-fo-transport-13.png) repeat;
-  background-size: 90px;
-  margin: 0;
-  padding: 0;
+  background: $degrade;
 
   .title-container {
-    background: $degrade2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
 
     h1 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 50px;
       font-size: 2.2rem;
       color: $white;
       text-shadow: 0 0 5px $blackShadow;
