--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -95,6 +95,47 @@ a .bouton-appel i {
   color: #fff;
 }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 button {
   border: none;
   background: none;
@@ -1228,6 +1269,7 @@ footer .footer-copyright .heart {
   transition: 0.2s;
   text-transform: uppercase;
   font-size: 0.9rem;
+  cursor: pointer;
 }
 #outils #menu-outils .left-bar-outils ul li:first-of-type {
   border-radius: 10px 10px 0 0;
@@ -1247,6 +1289,8 @@ footer .footer-copyright .heart {
 #outils #menu-outils .outils-container #tracts,
 #outils #menu-outils .outils-container #les-essentiels {
   display: none;
+  -webkit-animation: fadeIn 1s linear;
+          animation: fadeIn 1s linear;
 }
 #outils #menu-outils .outils-container #tous-les-outils .container-docs,
 #outils #menu-outils .outils-container #outils-syndicaux .container-docs,
