--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -7,5 +7,6 @@
 @import "./layout/footer";
 @import "./pages/home";
 @import "./pages/nous-connaitre";
-@import "./pages/nous-contacter";
 @import "./pages/outils";
+@import "./pages/faq";
+@import "./pages/nous-contacter";
