--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -701,6 +701,7 @@ footer .footer-copyright .heart {
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  padding: 20px;
   -webkit-transition: 0.2s ease-in;
   transition: 0.2s ease-in;
 }
