--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -61,7 +61,7 @@
         letter-spacing: 1px;
         text-shadow: 0 0 5px $blackShadow;
         box-shadow: 0 0 5px $blackShadow;
-
+        padding: 20px;
         transition: 0.2s ease-in;
 
         &:hover {
