--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1402,4 +1402,63 @@ footer .footer-copyright .heart {
 #nous-contacter #infos-contact .right-bar form textarea:active, #nous-contacter #infos-contact .right-bar form textarea:focus, #nous-contacter #infos-contact .right-bar form textarea:hover {
   outline: none;
   border: 1px solid #8b0000;
+}
+
+#je-souhaite-adherer .section {
+  padding: 50px;
+}
+#je-souhaite-adherer .section .selection-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+#je-souhaite-adherer .section .selection-container a .selection-item {
+  background: url(../img/hero.webp) center/cover;
+  height: 250px;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#je-souhaite-adherer .section .selection-container a .selection-item div {
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(135deg, rgba(184, 0, 0, 0.7), rgba(139, 0, 0, 0.7));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+#je-souhaite-adherer .section .selection-container a .selection-item div:hover {
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(135deg, #b80000, #8b0000);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+#je-souhaite-adherer .section .selection-container a .selection-item div h2 {
+  color: #fff;
 }/*# sourceMappingURL=index.css.map */
