--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1468,19 +1468,27 @@ footer .footer-copyright .heart {
 }
 
 #adhesion-simple .section {
-  padding: 50px 50px 20px;
+  padding: 0px 50px 20px;
 }
 #adhesion-simple .adhesion-form {
   padding: 0 50px 70px;
 }
 #adhesion-simple .adhesion-form form {
-  width: 50%;
+  width: 80%;
+  margin: 0 auto;
   text-align: center;
+  border-radius: 10px;
+  background: linear-gradient(135deg, #b80000, #8b0000);
 }
 #adhesion-simple .adhesion-form label {
   padding: 20px;
 }
 #adhesion-simple .adhesion-form input {
+  text-align: center;
   display: block;
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
+  padding: 5px 10px;
+  margin: 10px;
+  font-size: 1rem;
 }/*# sourceMappingURL=index.css.map */
