--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -47,7 +47,7 @@ header {
             list-style: none;
             transition: 0.2s;
             padding: 0 10px;
-            cursor: pointer;
+            cursor: url(../img/cursor-hover.ico), pointer;
             position: relative;
 
             &:hover {
