--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -22,7 +22,7 @@
   font-family: "poppins", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   color: #000;
   scroll-behavior: smooth;
-  cursor: default;
+  cursor: url(../img/cursor.ico), pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -55,7 +55,7 @@ i {
 a {
   -webkit-transition: 0.2s;
   transition: 0.2s;
-  cursor: pointer;
+  cursor: url(../img/cursor-hover.ico), pointer;
 }
 a:hover {
   color: #8b0000;
@@ -415,7 +415,7 @@ header .barre-sup .menu-barre-sup nav ul li {
   -webkit-transition: 0.2s;
   transition: 0.2s;
   padding: 0 10px;
-  cursor: pointer;
+  cursor: url(../img/cursor-hover.ico), pointer;
   position: relative;
 }
 header .barre-sup .menu-barre-sup nav ul li:hover i {
@@ -711,6 +711,7 @@ footer .footer-copyright .heart {
   background: linear-gradient(135deg, #b80000, #8b0000);
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
+  cursor: url(../img/cursor-hover.ico), pointer;
 }
 
 .lettre {
@@ -732,7 +733,7 @@ footer .footer-copyright .heart {
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   padding: 50px;
-  margin: 50px 0 0 -150px;
+  margin: 50px 100px 0 -150px;
 }
 .lettre .texte-lettre h2 {
   color: #fff;
@@ -1139,7 +1140,7 @@ footer .footer-copyright .heart {
   transition: 0.2s;
   text-transform: uppercase;
   font-size: 0.9rem;
-  cursor: pointer;
+  cursor: url(../img/cursor-hover.ico), pointer;
 }
 #outils #menu-outils .left-bar-outils ul li:first-of-type {
   border-radius: 10px 10px 0 0;
@@ -1237,7 +1238,7 @@ footer .footer-copyright .heart {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  cursor: pointer;
+  cursor: url(../img/cursor-hover.ico), pointer;
 }
 #faq .questions-answers .question-item .question h2 {
   font-weight: normal;
@@ -1452,7 +1453,7 @@ footer .footer-copyright .heart {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  cursor: pointer;
+  cursor: url(../img/cursor-hover.ico), pointer;
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
@@ -1474,21 +1475,49 @@ footer .footer-copyright .heart {
   padding: 0 50px 70px;
 }
 #adhesion-simple .adhesion-form form {
-  width: 80%;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   border-radius: 10px;
-  background: linear-gradient(135deg, #b80000, #8b0000);
+  background: #f1f1f1;
+  padding: 50px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
 }
-#adhesion-simple .adhesion-form label {
-  padding: 20px;
+#adhesion-simple .adhesion-form form div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 10px 0;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-#adhesion-simple .adhesion-form input {
-  text-align: center;
-  display: block;
-  width: 80%;
-  margin: 0 auto;
+#adhesion-simple .adhesion-form form div input {
   padding: 5px 10px;
-  margin: 10px;
+  margin: 0 5px;
   font-size: 1rem;
+  width: 100%;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #000;
+  border-radius: 3px;
+}
+#adhesion-simple .adhesion-form form div input:active, #adhesion-simple .adhesion-form form div input:focus, #adhesion-simple .adhesion-form form div input:hover {
+  outline: none;
+  border-bottom: 1px solid #8b0000;
+}
+#adhesion-simple .adhesion-form form button {
+  margin-top: 30px;
+  cursor: url(../img/cursor-hover.ico), pointer;
+}
+#adhesion-simple .adhesion-form form input[type=checkbox] {
+  width: auto;
+}
+#adhesion-simple .adhesion-form form p {
+  display: block;
+  margin-left: 10px;
 }/*# sourceMappingURL=index.css.map */
