--- a/assets/css/pages/_adhesion.scss
+++ b/assets/css/pages/_adhesion.scss
@@ -32,7 +32,7 @@
             width: 100%;
             height: 100%;
             border-radius: 10px;
-            cursor: pointer;
+            cursor: url(../img/cursor-hover.ico), pointer;
             transition: 0.2s ease;
 
             &:hover {
@@ -58,23 +58,49 @@
   .adhesion-form {
     padding: 0 50px 70px;
     form {
-      width: 80%;
       margin: 0 auto;
-      text-align: center;
+      text-align: left;
       border-radius: 10px;
-      background: $degrade;
-    }
-    label {
-      padding: 20px;
-    }
-    input {
-      text-align: center;
-      display: block;
-      width: 80%;
-      margin: 0 auto;
-      padding: 5px 10px;
-      margin: 10px;
-      font-size: 1rem;
+      background: $border;
+      padding: 50px;
+      box-shadow: 0 0 5px $blackShadow;
+
+      div {
+        display: flex;
+        margin: 10px 0;
+        justify-content: start;
+        align-items: center;
+
+        input {
+          padding: 5px 10px;
+          margin: 0 5px;
+          font-size: 1rem;
+          width: 100%;
+          border-top: none;
+          border-left: none;
+          border-right: none;
+          border-bottom: 1px solid $black;
+          border-radius: 3px;
+          &:active,
+          &:focus,
+          &:hover {
+            outline: none;
+            border-bottom: 1px solid $color1;
+          }
+        }
+      }
+      button {
+        margin-top: 30px;
+        cursor: url(../img/cursor-hover.ico), pointer;
+      }
+
+      input[type="checkbox"] {
+        width: auto;
+      }
+      p {
+        display: block;
+        margin-left: 10px;
+      }
     }
   }
 }
