--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -68,6 +68,7 @@
           box-shadow: 0 0 10px $blackShadow;
           background: $degrade;
           transform: scale(1.05);
+          cursor: url(../img/cursor-hover.ico), pointer;
         }
       }
     }
@@ -91,7 +92,7 @@
     box-shadow: 0 0 5px $blackShadow;
     border-radius: 10px;
     padding: 50px;
-    margin: 50px 0 0 -150px;
+    margin: 50px 100px 0 -150px;
 
     h2 {
       color: $white;
